# TheFirstPisronGame

./: Cargo.nix  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-6-link
src/: #main.rs#  .##main.rs#  main.rs
