[package]
name = "square"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
piston = "0.55.0"
pistoncore-event_loop = "0.55.0"
#glutin = "0.31.3"
#sdl2-sys = "0.36.0"
#piston2d-graphics = "0.44.0"
#pistoncore-glutin_window = "0.72.0"
#piston2d-opengl_graphics = "0.84.0"
